# pyomvbb

./: .gitignore  .gitmodules  CMakeLists.txt  build.bat  build.sh  example.py  setup.bat  setup.py  setup.sh
lib/src/: CMakeLists.txt  __init__.py  bindings.cpp  converter.hpp
